# WCN

./: .clang-format  .clangd  .gitattributes  .gitignore  .md  CMakeLists.txt  IFLOW.md  README.md  TODO.md  build-wasm-dev.bat  build-wasm-dev.sh  build-wasm.bat  get_wasm_exports.py  make.build-wasm.bat  make.build-wasm.sh  make.build.bat  run-wasm-test.bat  run-wasm-test.sh  test_wasm_load.js  wasm_exports.txt
.letta/: settings.json  settings.local.json
assets/: .gitignore
build-wasm/: CMakeCache.txt  Makefile  cmake_install.cmake  wcn.js  wcn.wasm
docs/: WASM_BUILD.md
examples/: CMakeLists.txt
examples/GLFW/: .clangd  CMakeLists.txt  README.md  arc_test.c  baseline_test.c  image_decoder_test.c  line_cap_join_test.c  minimal_test.c  render_test.c  sai2_like_drawing_app.c  sdf_text_test.c  simple_glfw_test.c  simple_text_test.c  transform_test.c
examples/WCN-MATH-ONLY/: B.c  CMakeLists.txt  Fp_test.c  R.c
examples/wasm/: README.md  font_decoder_test.html  image_test.html  left-game.html  nbody-test.html  simple_test.html  wasm_font_example.c  wcn_canvas.js
examples/wasm/math_only/: test_math.js
impl/: README.md  wcn_freetype2_impl.h  wcn_glfw_impl.h  wcn_stb_image_impl.h  wcn_stb_truetype_impl.h
include/WCN/: WCM_Math.Todo  WCM_Math.html  WCN.h  WCN_FP.h  WCN_FP_UNSAFE.h  WCN_MATH_CPP.hpp  WCN_Math.h  WCN_PLATFORM_MACROS.h  WCN_SIMD_MACROS.h  WCN_WASM.h  WCN_WASM_Font.h  WCN_WASM_Image.h  WCN_WGSL.h
src/: shader_manager.c  shader_manager.h  wcn.c  wcn_context.c  wcn_emcc_js.c  wcn_emcc_js.h  wcn_image.c  wcn_instance.c  wcn_internal.h  wcn_math.c  wcn_memory.c  wcn_memory.h  wcn_path.c  wcn_rect.c  wcn_renderer.c  wcn_sdf_atlas.c  wcn_style.c  wcn_text.c  wcn_transform.c  wcn_wasm_exports.c  wcn_wasm_font_decoder.c  wcn_wasm_image_decoder.c
src/math/: extract_exports.js  wcn_math_base.c  wcn_math_globals.c  wcn_math_internal.h  wcn_math_mat3.c  wcn_math_mat4.c  wcn_math_other.c  wcn_math_quat.c  wcn_math_vec2.c  wcn_math_vec3.c  wcn_math_vec4.c  wcn_math_wasm.c
src/shader/compute/: instance_expander.wgsl.h  state_manager.wgsl.h
src/shader/renderer/: render_2d.wgsl.h
